<resources>
    <string name="app_name">Debt</string>
    <string name="password_error">Password must have  at least 6 characters</string>
    <string name="email_error">Invalid email</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register_button">Sign up</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="username_error">Username needs to be at least 6 characters</string>
    <string name="repeat_password_error">Passwords do not match</string>
    <string name="log_in_button">Log in</string>
    <string name="all_debts_title">All debts</string>
    <string name="my_profile_title">My profile</string>
    <string name="log_out_button">Выйти из аккаунта</string>
    <string name="email_text">User email: %s</string>
    <string name="username_text">Username: %s</string>
    <string name="welcome_description">In order to join us, you first need to sign up :]</string>
    <string name="no_items_text">There seems to be no items :[</string>
    <string name="error_title">Oops</string>
    <string name="error_message">Something went wrong! Please try again.</string>
    <string name="general_positive_button">OK</string>
    <string name="debt_text_hint">Enter your text</string>
    <string name="add_debt_text">Add debt</string>
    <string name="debt_error">Сумма не сходится</string>
    <string name="email_empty_error">Email is empty</string>
    <string name="welcome_to_our_pun_ground">Welcome to our Pun-ground</string>
    <string name="favorite_button">favorite button</string>
    <string name="add_debt_button">add debt button</string>
    <string name="without_group">Без группы</string>
    <string name="debtors">Участники</string>
    <string name="edit_debt">Редактирование события</string>
    <string name="new_debt">Новое событие</string>
    <string name="today">cегодня</string>
    <string name="description">Описание</string>
    <string name="group">Группа</string>
    <string name="date">Дата</string>
    <string name="payed">Платил</string>
    <string name="sum">Сумма</string>
    <string name="equal">Поровну</string>
    <string name="calc">Посчитать</string>
    <string name="contacts">Контакты</string>
    <string name="groups">Группы</string>
    <string name="events">События</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="email">email</string>
    <string name="password">пароль</string>
    <string name="passwordHolder">••••••••</string>


    <string-array name="currency">
        <item>₽</item>
        <item>$</item>
        <item>€</item>
    </string-array>
</resources>
