<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_personal_account"
            android:title="@string/personal_account" />
    </group>
</menu>