<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.copper.debt.ui.debts.AllDebtsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_debts" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.copper.debt.ui.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.copper.debt.ui.groups.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.copper.debt.ui.personalAccount.PersonalAccountFragment"
        android:label="@string/personal_account"
        tools:layout="@layout/fragment_personal_account"/>

</navigation>